--- a/AcunmedyaAkademiProject3/appsettings.json
+++ b/AcunmedyaAkademiProject3/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=HAMZA;Initial Catalog=AcunmedyaDb3;Integrated Security=true;TrustServerCertificate=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
