--- a/AcunmedyaAkademiProject3/AcunmedyaAkademiProject3.csproj
+++ b/AcunmedyaAkademiProject3/AcunmedyaAkademiProject3.csproj
@@ -4,7 +4,15 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <LangVersion>11.0</LangVersion>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Remove="Views\Default\Contact.php\**" />
+    <Content Remove="Views\Default\Contact.php\**" />
+    <EmbeddedResource Remove="Views\Default\Contact.php\**" />
+    <None Remove="Views\Default\Contact.php\**" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.36" />
@@ -23,6 +31,8 @@
   <ItemGroup>
     <Folder Include="Areas\Admin\Data\" />
     <Folder Include="Areas\Admin\Models\" />
+    <Folder Include="Areas\Admin\Views\AdminLayout\" />
+    <Folder Include="Views\Shared\Components\_DefaultFeatureComponentPartial\" />
   </ItemGroup>
 
 </Project>
